--- a/ios/Podfile
+++ b/ios/Podfile
@@ -33,6 +33,10 @@ target 'netflixclone' do
   #   use_flipper!()
   # end
 
+  pod 'react-native-video', :path => '../node_modules/react-native-video'
+
+  pod 'RNVectorIcons', :path => '../node_modules/react-native-vector-icons'
+
   post_install do |installer|
     react_native_post_install(installer)
     __apply_Xcode_12_5_M1_post_install_workaround(installer)
