--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "netflix-clone",
+  "proxy": "http://localhost:5000",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
@@ -9,13 +10,38 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.17.9",
+    "@react-native-community/masked-view": "^0.1.11",
+    "@react-navigation/bottom-tabs": "^6.3.2",
+    "@react-navigation/native": "^6.0.11",
+    "@react-navigation/stack": "^6.2.2",
+    "axios": "^0.27.2",
     "expo": "~45.0.0",
+    "expo-av": "~11.2.3",
+    "expo-cli": "^6.0.5",
     "expo-splash-screen": "~0.15.1",
     "expo-status-bar": "~1.3.0",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
+    "lottie-react-native": "^5.1.4",
     "react-native": "0.68.2",
-    "react-native-web": "0.17.7"
+    "react-native-elements": "^3.4.2",
+    "react-native-gesture-handler": "~2.2.1",
+    "react-native-keyboard-aware-scroll-view": "^0.9.5",
+    "react-native-paper": "^4.12.4",
+    "react-native-reanimated": "~2.8.0",
+    "react-native-responsive-fontsize": "^0.5.1",
+    "react-native-safe-area-context": "4.2.4",
+    "react-native-screens": "~3.11.1",
+    "react-native-super-grid": "^4.5.0",
+    "react-native-vector-icons": "^9.2.0",
+    "react-native-web": "0.17.7",
+    "react-native-webview": "^11.23.0",
+    "react-native-youtube-iframe": "^2.2.2",
+    "react-redux": "^8.0.2",
+    "reanimated-bottom-sheet": "^1.0.0-alpha.22",
+    "redux": "^4.2.0",
+    "tslib": "^2.4.0",
+    "react": "17.0.2",
+    "react-dom": "17.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
