--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "expo-splash-screen": "~0.15.1",
     "expo-status-bar": "~1.3.0",
     "lottie-react-native": "^5.1.4",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
     "react-native": "0.68.2",
     "react-native-elements": "^3.4.2",
     "react-native-gesture-handler": "~2.2.1",
@@ -39,9 +41,8 @@
     "react-redux": "^8.0.2",
     "reanimated-bottom-sheet": "^1.0.0-alpha.22",
     "redux": "^4.2.0",
-    "tslib": "^2.4.0",
-    "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "toastify-react-native": "^3.0.0",
+    "tslib": "^2.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
