--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "expo-cli": "^6.0.5",
     "expo-splash-screen": "~0.15.1",
     "expo-status-bar": "~1.3.0",
+    "expo-updates": "^0.14.5",
     "lottie-react-native": "^5.1.4",
     "react": "17.0.2",
     "react-dom": "17.0.2",
